--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "emoji-picker": "^0.0.7",
     "emoji-picker-react": "^4.17.2",
     "lucide-react": "^0.563.0",
